--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
       <section id="main_content" class="inner">
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <h1 id="project_title">{{ site.title }}</h1>
+          <h2 id="project_tagline">{{ site.description }}</h2>
       </section>
           {% if site.show_downloads %}
             <section id="downloads">
